@@ -1,12 +1,0 @@
-# $NetBSD: Makefile,v 1.26 2023/11/12 13:23:02 wiz Exp $
-
-DISTNAME=	phonon-backend-vlc-0.10.3
-
-COMMENT=	Multimedia API for KDE and QT - VLC backend
-PKGREVISION=	7
-
-.include "Makefile.common"
-
-.include "../../multimedia/phonon/buildlink3.mk"
-
-.include "../../mk/bsd.pkg.mk"
