@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2013/05/21 12:23:46 markd Exp $
-lib/kde4/plugins/phonon_backend/phonon_vlc.so
-share/kde4/services/phononbackends/vlc.desktop
