@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.12 2021/10/26 11:01:15 nia Exp $
-
-BLAKE2s (phonon-backend-vlc-0.10.3.tar.xz) = d7bd2611fb19c4bfe2342cae9a96c54b69a7ab419fbf2dca94e8972fd790d990
-SHA512 (phonon-backend-vlc-0.10.3.tar.xz) = 77f66536b9debc62807ca952173640a40ab9b82e17a2ac85e524c1f5dada16a39c7bb1c72230f3ca14a9c826adaf79b9439aa223be960cded634dbd00e91127f
-Size (phonon-backend-vlc-0.10.3.tar.xz) = 66488 bytes
