@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2718 2024/04/26 15:13:30 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2719 2024/04/26 15:14:26 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4471,3 +4471,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed graphics/kqtquickcharts4 successor graphics/kqtquickcharts [wiz 2024-04-26]
 	Removed graphics/qimageblitz [wiz 2024-04-26]
 	Removed multimedia/phonon-backend-gstreamer [wiz 2024-04-26]
+	Removed multimedia/phonon-backend-vlc [wiz 2024-04-26]
